--- a/index.html
+++ b/index.html
@@ -121,7 +121,9 @@
               take her out for?
             </div>
             <div class="grid gap-2">
-              <div class="chat-message flex gap-2 gradient items-center msg-5">
+              <div
+                class="chat-message flex gap-2 gradient items-center msg-5 cursor-pointer"
+              >
                 <input
                   type="radio"
                   id="price-1"
@@ -130,13 +132,15 @@
                 />
                 <label
                   for="price-1"
-                  class="flex justify-between w-full items-center"
+                  class="flex justify-between w-full items-center cursor-pointer"
                 >
                   <span class="opacity-60">30 minute walk</span>
                   <span class="font-bold text-base">$29</span>
                 </label>
               </div>
-              <div class="chat-message flex gap-2 gradient items-center msg-5">
+              <div
+                class="chat-message flex gap-2 gradient items-center msg-5 cursor-pointer"
+              >
                 <input
                   type="radio"
                   id="price-2"
@@ -145,7 +149,7 @@
                 />
                 <label
                   for="price-2"
-                  class="flex justify-between w-full items-center"
+                  class="flex justify-between w-full items-center cursor-pointer"
                 >
                   <span class="opacity-60">1 hour walk</span>
                   <span class="font-bold text-base"> $49</span>
@@ -165,7 +169,10 @@
                 aria-label="chat-input"
                 placeholder="Type a message ..."
               />
-              <button class="px-3 py-2 rounded-full" type="submit">
+              <button
+                class="px-3 py-2 rounded-full cursor-pointer"
+                type="submit"
+              >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   class="h-4 w-4"
