Updated html to fix some issues

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               stroke="white"
             >
               <path
-                strokeLinecap="round"
+                
                 strokeLinejoin="round"
                 strokeWidth="{2}"
                 d="M15 19l-7-7 7-7"
@@ -75,7 +75,7 @@
               stroke="white"
             >
               <path
-                stroke-linecap="round"
+               
                 stroke-linejoin="round"
                 stroke-width="2"
                 d="M12 5v.01M12 12v.01M12 19v.01M12 6a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2z"
@@ -172,6 +172,7 @@
               <button
                 class="px-3 py-2 rounded-full cursor-pointer"
                 type="submit"
+                aria-label="send-message-btn"
               >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
