Updated the sections to div in index.html

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           </div>
 
           <!-- Chat section -->
-          <section
+          <div
             class="flex flex-col gap-3 p-2 overflow-x-hidden chat-messages"
           >
             <div class="chat-message incoming-message msg-1">
@@ -156,8 +156,8 @@
                 </label>
               </div>
             </div>
-          </section>
-          <section class="mb-1 p-2">
+          </div>
+          <div class="mb-1 p-2">
             <form
               id="chat-form"
               class="flex w-full rounded-3xl bg-white ring-cyan-500 focus-within:ring-2"
@@ -190,7 +190,7 @@
                 </svg>
               </button>
             </form>
-          </section>
+          </div>
         </div>
       </figure>
 
